report-bib template finalized! Avalable options: make pdf                   make pdf-template                   make html                   make docx

--- a/report-bib/Makefile
+++ b/report-bib/Makefile
@@ -1,15 +1,36 @@
-.PHONY: pdf-template pdf-normal html pdf-test
+.PHONY: pdf pdf-template html docx clean
 
-FILES := 	dynamic/ruby.md \
-			dynamic/python.md \
-			dynamic/javascript.md \
-			static/java.md \
-			static/csharp.md \
-			functional/haskell.md \
-			functional/fsharp.md \
+# FILES := 	dynamic/ruby.md \
+# 			dynamic/python.md \
+# 			dynamic/javascript.md \
+# 			static/java.md \
+# 			static/csharp.md \
+# 			functional/haskell.md \
+# 			functional/fsharp.md \
+# 			bibliography.md
+
+FILES := 	header.md \
+			content/*.md \
 			bibliography.md
 
-OUTPUT := report-bib
+OUTPUT := report
+
+pdf:
+	pandoc  \
+		--latex-engine=xelatex        \
+		--table-of-contents \
+		--filter pandoc-fignos \
+		--filter pandoc-eqnos \
+		--filter pandoc-tablenos \
+		--filter pandoc-citeproc \
+		--from         markdown       \
+		--to           latex          \
+		--out          $(OUTPUT).pdf 		\
+		--csl style.csl               \
+		--bibliography biblio.bib     \
+		--standalone --number-sections --top-level-division=chapter --smart $(FILES)
+
+	xdg-open $(OUTPUT).pdf
 
 
 pdf-template:
@@ -29,21 +50,6 @@ pdf-template:
 		-S -s $(FILES)
 	xdg-open $(OUTPUT).pdf
 
-pdf-normal:
-	pandoc  \
-		--latex-engine=xelatex        \
-		--table-of-contents \
-		--filter pandoc-fignos \
-		--filter pandoc-eqnos \
-		--filter pandoc-tablenos \
-		--filter pandoc-citeproc \
-		--from         markdown       \
-		--to           latex          \
-		--out          $(OUTPUT).pdf 		\
-		--csl ieee.csl               \
-		--bibliography biblio.bib     \
-		-S -s $(FILES)
-	xdg-open $(OUTPUT).pdf
 
 html:
 	pandoc  \
@@ -56,9 +62,34 @@ html:
 		--from         markdown       \
 		--to           html5          \
 		--out          $(OUTPUT).html 		\
-		--css html_style.css \
+		--template template.html \
+		--css template.css \
 		--bibliography biblio.bib     \
-		-S -c style.css -s $(FILES)
+	    --standalone --number-sections --top-level-division=chapter --smart -c style.css -s $(FILES)
+
 	xdg-open $(OUTPUT).html
 
-#	  --csl ieee.csl               \
+docx:
+	pandoc  \
+		--table-of-contents \
+		--filter pandoc-fignos \
+		--filter pandoc-eqnos \
+		--filter pandoc-tablenos \
+		--filter pandoc-citeproc \
+		--from         markdown       \
+		--to           docx          \
+		--out          $(OUTPUT).docx 		\
+		--csl ieee.csl               \
+		--bibliography biblio.bib     \
+		--standalone --number-sections --top-level-division=part --smart $(FILES)
+
+	xdg-open $(OUTPUT).docx
+
+clean:
+	rm $(OUTPUT).docx $(OUTPUT).html $(OUTPUT).pdf *.aux \
+												   *.lof \ 
+												   *.log \
+												   *.lot \
+												   *.fls \
+												   *.out \
+												   *.toc
